--- a/Tienda/.settings/org.eclipse.core.resources.prefs
+++ b/Tienda/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/cibertec=UTF-8
 encoding//src/cibertec/DialogoAyuda.java=UTF-8
 encoding//src/cibertec/DialogoDescuentos.java=UTF-8
 encoding//src/cibertec/DialogoReportes.java=UTF-8
